src/test/contracts/negative/error_type_record_access.mligo
type foo = {
  i : int;
}

let bar (x : foo) : int = 
  let y : string = x.i in
  42
